Update nav bar on non-IT.html. Update disclaimer on hexterika cyberlab services.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -53,7 +53,9 @@
         </section>
         <section>
             <h2>Disclaimer</h2>
-            <p>Hexterica Cyberlab is a hybrid professional platform that showcases my cybersecurity work both as a freelance consultant and as a portfolio for remote job applications. My current income comes primarily from local, on-site technical support services in Thailand, while I actively transition to international, remote roles—especially in SaaS environments. This site is part of that transition and reflects both my freelance offerings and my broader professional journey.</p>
+            <p>This website serves both as a portfolio for remote job applications and as the business front for my freelance services. I'm currently transitioning from earning primarily through local on-site technical support to building a fully remote career. While cybersecurity remains the core of my expertise and portfolio, I'm leveraging SaaS-related roles as an accessible gateway into remote work. For clients seeking independent, project-based support, I also offer freelance cybersecurity and tech services through this site.</p>
+            <p>You may also come across non-IT and non-cybersecurity skills and services on this website. These represent secondary areas I've explored—often out of necessity during unstable periods—and are not the core of my long-term professional focus.</p>
+            <p>Any services or content outside of cybersecurity and IT are grouped together under a general non-IT category, which is intentionally kept distinct from Hexterika Cyberlab to reflect their secondary role in my professional focus.</p>
         </section>
     </main>
 
