Update hexterika-cyberlab-services.html and hexterika-cyberlab-portfolio.html with the correct css files

--- a/hexterika-cyberlab-portfolio.html
+++ b/hexterika-cyberlab-portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexterika Breaks Free</title>
     <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/cyberlab.css">
+    <link rel="stylesheet" href="assets/css/hexterika-cyberlab-portfolio.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -52,11 +52,11 @@
             <p>While my past work has been primarily on-site, I'm currently focused on building a fully remote career. I operate from Thailand with a reliable setup, strong internet, and a self-directed schedule aligned with U.S. and European time zones. This alignment supports both my productivity and personal privacy, and positions me to contribute seamlessly across global teams.</p>
             <p>My independent work through Hexterika Cyberlab reflects this shift, where I've simulated client-facing SaaS support environments, documented technical workflows, and worked toward international standards. I'm ready for remote-first roles that value communication, adaptability, and technical depth — and I welcome relocation sponsorship for long-term opportunities that match my direction.</p>
             <p>I'm proactively aligning my tools, time, and training to support users and teams across borders — not just remotely, but professionally and consistently.</p>
-</section>
         </section>
 
         <!--My journey-->
-        <h2>My Technical Journey: SaaS, Cybersecurity, and Support</h2>
+        <section>
+            <h2>My Technical Journey: SaaS, Cybersecurity, and Support</h2>
             <p>I hold key cybersecurity certifications that validate my foundational knowledge and hands-on capabilities:</p>
             <ul>
                 <li><strong>CompTIA Security+</strong></li>
@@ -68,6 +68,7 @@
             <p>My practical experience extends to various hands-on challenges, including <strong>CTFs, dedicated TryHackMe labs, PortSwigger Web Security Academy exercises, and running a personal virtual home lab</strong>.</p>
             <p>My GitHub repositories host detailed write-ups, walkthroughs, and mock reports that meticulously document my learning journey and projects.</p>
             <p>I am currently organizing my portfolio to include past and future <strong>Bugcrowd Bug Bounty Program</strong> findings, eager to sharpen real-world ethical hacking skills through active participation soon.</p>
+        </section>
 
             <section class="work-experience-section">
                 <h3>Relevant Work Experience</h3>
