--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexterika Breaks Free</title>
     <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/hexterika-cyberlab-services.css">
 </head>
 <body>
     <!-- Header Section -->
