Making changes to the hexterika-cyberlab-services.html to reflect my business side. Then, changes all 3 pages' nav bar so the only active pages are index.html, hexterika-cyberlab-portfolio.html, hexterika-cyberlab-services.html, and certs.html. I also remove contact.html for now and added it as a section in each file.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -13,13 +13,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="hexterika-cyberlab-portfolio.html">Hexterika Cyberlab Portfolio</a></li>
                 <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
-                <li><a href="non-IT.html">Non-IT/Cybersecurity</a></li>
-                <li><a href="services.html">Services</a></li>
                 <li><a href="certs.html">Certificates</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -28,34 +24,53 @@
         <!--Overview Section-->
         <section>
             <h1>Hexterika Cyberlab Services</h1>
-            <p>Hexterica CyberLab is a freelance business offering cybersecurity consulting (including penetration testing), technical support, and remote digital services. While my local work focuses on IT and technical support, my online services are expanding into cybersecurity, web security assessments, and client-focused consulting.</p>
-            <p>This business operates as a sole proprietorship under the name Sangsongthong, serving both individuals and small businesses. Remote projects are accepted through platforms like Upwork or via direct inquiry through the <a href="contact.html">Contact</a> page., while cybersecurity education services are available on Preply.</p>
-            <p>The brand and its associated website are currently in a transitional phase, with the intention to scale from local freelancing into international cybersecurity and SaaS-related roles.</p>
-            <ul>
-                <li>
-                    <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork: Information Security Specialized Profile</a>
-                    <p>Offering penetration testing, vulnerability assessment, cybersecurity consulting, and general technical support tailored to protect digital assets.</p>
-                </li>
-            
-                <li>
-                    <a href="https://preply.in/SANGSONGTHONG6EN23352917" target="_blank" rel="noopener noreferrer">Preply</a>
-                    <p>1-on-1 tutoring in cybersecurity basics for kids and beginner tech topics.</p>
-                </li>
-            </ul>
-            <p>For technical support, cybersecurity services, or custom project inquiries, please visit my Upwork profile to connect and submit requests. If you prefer to reach out directly, you can use the contact details provided on the contact page.</p>
+            <p>Welcome to <strong>Hexterika CyberLab</strong> — the tech services arm of the Hexterika brand. I provide a hybrid mix of <strong>remote tech support, cybersecurity consulting, SaaS support, and IT infrastructure services</strong>. My goal is to help individuals and small businesses secure, maintain, and optimize their digital environments while continuing my transition into a full-time cybersecurity and SaaS remote career.</p>
+            <p>Hexterika CyberLab is currently operated as an unregistered freelance business under my legal name, <em>Sangsongthong</em>. Business registration is under consideration for future expansion, likely in Georgia or Romania, depending on long-term residency, client base, and operational needs. Remote projects are accepted through <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork</a> and direct outreach via the contact section below.</p>
         </section>
         <section>
-            <h2>Sample Works</h2>
-            <p>Below is a sample penetration testing report I created to demonstrate the format and depth of analysis clients can expect. It reflects my approach to identifying vulnerabilities and providing actionable remediation steps. This report is hosted on my GitHub repository and is periodically updated to reflect improvements in my methodology and reporting style.</p>
+            <h2>Current Services</h2>
             <ul>
-                <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Sample Penetration Testing Report</a></li>
+                <li><strong>Remote Tech Support & Troubleshooting</strong><br>Support for home networks, smart devices, SaaS platforms (Notion, Zoom, M365), and user onboarding or configuration help.</li>
+
+                <li><strong>Business Email Setup & Security Hardening</strong><br>End-to-end setup of custom business email under your domain, with SPF/DKIM/DMARC implementation and DNS troubleshooting using tools like MXToolbox.</li>
+
+                <li><strong>Lightweight Cybersecurity Review</strong><br>Basic security assessments for websites, cloud apps, and work-from-home setups. Includes surface vulnerability scanning and simple remediation guidance.</li>
+
+                <li><strong>Penetration Testing (Entry-Level)</strong><br>Offering mock and entry-level pentesting reports, including internal lab simulations focused on AD environments and AWS IAM permissions testing. See project samples below.</li>
+
+                <li><strong>Cybersecurity Education & Tutoring</strong><br>1-on-1 cybersecurity tutoring for beginners available via <a href="https://preply.in/SANGSONGTHONG6EN23352917" target="_blank" rel="noopener noreferrer">Preply</a>.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Sample Projects</h2>
+            <ul>
+                <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Mock Penetration Testing Report</a></li>
+                <li>Coming soon: AWS IAM Misconfig Review, AD Pentest Report (CyberLab OneShot Series)</li>
             </ul>
         </section>
         <section>
             <h2>Disclaimer</h2>
-            <p>This website serves both as a portfolio for remote job applications and as the business front for my freelance services. I'm currently transitioning from earning primarily through local on-site technical support to building a fully remote career. While cybersecurity remains the core of my expertise and portfolio, I'm leveraging SaaS-related roles as an accessible gateway into remote work. For clients seeking independent, project-based support, I also offer freelance cybersecurity and tech services through this site.</p>
-            <p>You may also come across non-IT and non-cybersecurity skills and services on this website. These represent secondary areas I've explored—often out of necessity during unstable periods—and are not the core of my long-term professional focus.</p>
-            <p>Any services or content outside of cybersecurity and IT are grouped together under a general non-IT category, which is intentionally kept distinct from Hexterika Cyberlab to reflect their secondary role in my professional focus.</p>
+            <p>This site functions as both a freelance business page and personal portfolio while I transition from local tech support into international cybersecurity and SaaS roles. You may encounter experimental or archived work under different Hexterika sub-brands; those are paused or secondary for now and kept distinct from Hexterika CyberLab's core focus on IT and cybersecurity.</p>
+        </section>
+        <!-- Contact Section -->
+        <section>
+            <h2>Contact</h2>
+            <p>If you're interested in working with me or have project inquiries, please reach out via the platforms below:</p>
+            <ul>
+                <li><a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork Profile</a></li>
+                <li><a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website">Email: hexterika.cyberlab@hexterika-breaks-free.website</a></li>
+            </ul>
+        </section>
+
+        <!-- Social Media Section -->
+        <section>
+            <h2>Social Media</h2>
+            <ul>
+                <li><a href="https://www.facebook.com/hexterikacyberlab/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                <li><a href="https://www.instagram.com/hexterika.cyberlab/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            </ul>
         </section>
     </main>
 
