Add more projects to hexterika-cyberlab-services.html. Rename the project IT-Cybersecurity Oneshot from Archive GitHub to Cyberlab Oneshots. Re-write index.html to be a landing page.

--- a/hexterika-cyberlab-portfolio.html
+++ b/hexterika-cyberlab-portfolio.html
@@ -121,7 +121,7 @@
                 </li>
                 <li>
                     <strong>Cyberlab One-Shots:</strong> A growing archive of short technical deep-dives -- from DNS misconfigs to real-life troubleshooting and advisory notes.  
-                    <br><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">View GitHub Archive</a>
+                    <br><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">Cyberlab Oneshots</a>
                 </li>
             </ul>
 
