--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -27,6 +27,8 @@
             <p>Welcome to <strong>Hexterika CyberLab</strong> — the tech services arm of the Hexterika brand. I provide a hybrid mix of <strong>remote tech support, cybersecurity consulting, SaaS support, and IT infrastructure services</strong>. My goal is to help individuals and small businesses secure, maintain, and optimize their digital environments while continuing my transition into a full-time cybersecurity and SaaS remote career.</p>
             <p>Hexterika CyberLab is currently operated as an unregistered freelance business under my legal name, <em>Sangsongthong</em>. Business registration is under consideration for future expansion, likely in Georgia or Romania, depending on long-term residency, client base, and operational needs. Remote projects are accepted through <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork</a> and direct outreach via the contact section below.</p>
         </section>
+
+        <!--Current Services-->
         <section>
             <h2>Current Services</h2>
             <ul>
@@ -36,22 +38,32 @@
 
                 <li><strong>Lightweight Cybersecurity Review</strong><br>Basic security assessments for websites, cloud apps, and work-from-home setups. Includes surface vulnerability scanning and simple remediation guidance.</li>
 
-                <li><strong>Penetration Testing (Entry-Level)</strong><br>Offering mock and entry-level pentesting reports, including internal lab simulations focused on AD environments and AWS IAM permissions testing. See project samples below.</li>
+                <li><strong>Penetration Testing (Entry-Level)</strong><br>Offering mock and entry-level pentesting reports, including internal lab simulations focused on AD environments and AWS IAM permissions testing. This also includes real-world practice experience through platforms like:<br>
+                - Top 3% Contributor on TryHackMe (105+ rooms completed)<br>
+                - PortSwigger Web Security Labs (OWASP Top 10 coverage)<br>
+                Selected walkthroughs are included in the sample projects below.
+                </li>
 
                 <li><strong>Cybersecurity Education & Tutoring</strong><br>1-on-1 cybersecurity tutoring for beginners available via <a href="https://preply.in/SANGSONGTHONG6EN23352917" target="_blank" rel="noopener noreferrer">Preply</a>.</li>
             </ul>
         </section>
+
+        <!--Sample Projects-->
         <section>
             <h2>Sample Projects</h2>
             <ul>
                 <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Mock Penetration Testing Report</a></li>
-                <li>Coming soon: AWS IAM Misconfig Review, AD Pentest Report (CyberLab OneShot Series)</li>
+
+                <li><a href="https://github.com/sangsongthong-hexterika/TryHackMe-Walkthroughs" target="_blank" rel="noopener noreferrer">TryHackMe Walkthroughs (Selected Labs)</a></li>
+
+                <li><a href="https://github.com/sangsongthong-hexterika/PortSwiggerWalkthroughs" target="_blank" rel="noopener noreferrer">PortSwigger Web Security Academy Walkthroughs</a></li>
+
+                <li><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">Cyberlab Oneshot</a></li>
+
+                <li>Coming soon: AWS IAM Misconfig Review, AD Pentest Report</li>
             </ul>
         </section>
-        <section>
-            <h2>Disclaimer</h2>
-            <p>This site functions as both a freelance business page and personal portfolio while I transition from local tech support into international cybersecurity and SaaS roles. You may encounter experimental or archived work under different Hexterika sub-brands; those are paused or secondary for now and kept distinct from Hexterika CyberLab's core focus on IT and cybersecurity.</p>
-        </section>
+
         <!-- Contact Section -->
         <section>
             <h2>Contact</h2>
