--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
     <!-- Main Content (Grid Layout) -->
     <main>
 
-        <!--Hero Section-->
+        <!--Welcome Section New-->
+        <section>
+            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
+            <h1>Who Am I?</h1>
+            <p>Hi, I'm Sangsongthong, the creator of Hexterika — a digital brand dedicated to IT support and cybersecurity services. I'm currently operating as a solo freelancer while building my career in cybersecurity and SaaS.</p>
+            <p>This website serves a dual purpose:</p>
+            <ul>
+                <li>A hub for my freelance business (Hexterika CyberLab)</li>
+                <li>A live portfolio for remote job opportunities</li>
+            </ul>
+        </section>
+        
+        <!--Welcome Section Old-->
         <section>
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
@@ -38,47 +50,17 @@
             </p>
         </section>
 
-        <!--Primary Focus-->
+        <!--CTA Buttons-->
         <section>
-            <h2>🚀 Hexterika Cyberlab: My Core Focus</h2>
-            <p>Step into my cybersecurity playground—where I build, break, and explore. Inside, you'll find hands-on labs, real-world projects, a mock pentest report, and my certifications, including the globally recognized CompTIA Security+.</p>
-            <!--Optional: Adding a tiny CompTIA logo on the side to visually enhance the section, but not now. Now, only the barebone version is needed.-->
-            <a href="cyberlab.html" class="button-cta">👉 Explore Hexterika CyberLab</a>
-        </section>
-
-        <!--Priority Clarification Section-->
-        <section class="priorities-section">
-            <h2>🌍 Immediate Priorities</h2>
             <ul>
-                <li>Immediately available for full-time remote roles.</li>
-                <li>Able to work across time zones as required.</li>
-                <li>Actively preparing for international relocation.</li>
-                <li>Ready to begin remotely and transition through employment or visa pathways (including digital nomad options).</li>
-                <li>Familiar with relocation processes; passport is valid and ready for international use.</li>
-                <li>Open to opportunities across North America, Europe, and other regions aligned with long-term career growth.</li>
-            </ul>
-            <h3>Langauges Proficiency</h3>
-            <ul>
-                <li>🗣️ English: TOEIC Certified -- Writing: C1, Listening: B2, Speaking: B1, Reading: B1</li>
-                <li><strong>Currently Learning: </strong>Romanian, Spanish, French</li>
-                <li>Thai: Native</li>
-            </ul>
-        </section>
+                <li><a href="hexterika-cyberlab-portfolio.html">📁 Explore Hexterika Cyberlab Portfolio</a></li>
 
-        <section>
-            <h2>My Aproach To Work</h2>
-            <p>While my core focus has been in IT and cybersecurity, I've also pursued roles outside those lanes—like sales, content creation, and other areas that align with my broader skill set. I approach every opportunity with curiosity, adaptability, and the same level of drive. This isn't just about finding work—it's about building a future that reflects my range, resilience, and capacity to contribute in multiple ways.</p>
-        </section>
+                <li><a href="hexterika-cyberlab-services.html">🛠 Explore Hexterika Cyberlab Services</a></li>
 
-        <!--Where To Go Section-->
-        <section class="where-to-go-next">
-            <h2>👀 Where To Go Next</h2>
-            <ul class="destination-card">
-                <li>💻 <strong>If you're here regarding an IT or Cybersecurity role I applied for:</strong> 👉 See my portfolio in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
-                <li>🎨 <strong>If you're here about a non-technical or client-facing role I applied for:</strong> 👉 See my portfolio in <a href="non-IT.html">Non-IT/Cybersecurity</a> page.</li>
-                <li>🧑‍💻 <strong>If you're here about a Software Development role I applied for:</strong> This site is one of my frontend projects. Also go to the <a href="non-IT.html">Non-IT/Cybersecurity</a> page.</li>
-                <li>🛠️ <strong>If you're here about a freelance project:</strong> Go to the <a href="services.html">Services</a> page.</li>
-                <li>📬 <strong>If you're here for general inquiries or hiring:</strong> Go to the <a href="contact.html">Contact</a> page.</li>
+                <li>
+                    <a href="certs.html">📜 See My Full Certifications!</a>
+                    <p>You'll find all my certifications here — including those beyond the scope of Hexterika CyberLab. These reflect my journey of exploration, learning, and professional growth. While my current focus is Cybersecurity & IT, these skills may resurface as the brand evolves.</p>
+                </li>
             </ul>
         </section>
     </main>
