Rename hexterika-cyberlab-portfolio.html to portfolio.html and update all the links in index.html, portfolio.html, hexterika-cyberlab-services.html, and certs.html to reflect that. Update the content on the landing page to be easy to understand.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="hexterika-cyberlab-portfolio.html">Hexterika Cyberlab Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
                 <li><a href="certs.html">Certificates</a></li>
             </ul>
@@ -24,36 +24,22 @@
     <!-- Main Content (Grid Layout) -->
     <main>
 
-        <!--Welcome Section New-->
+        <!--Welcome Section-->
         <section>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
             <h1>Who Am I?</h1>
             <p>Hi, I'm Sangsongthong, the creator of Hexterika — a digital brand dedicated to IT support and cybersecurity services. I'm currently operating as a solo freelancer while building my career in cybersecurity and SaaS.</p>
             <p>This website serves a dual purpose:</p>
             <ul>
-                <li>A hub for my freelance business (Hexterika CyberLab)</li>
-                <li>A live portfolio for remote job opportunities</li>
+                <li>A professional portfolio to support my remote job search in cybersecurity and SaaS</li>
+                <li>A freelance services hub under my brand, Hexterika CyberLab, for project-based work and client collaboration</li>
             </ul>
-        </section>
-        
-        <!--Welcome Section Old-->
-        <section>
-            <h1>Welcome to Hexterika Breaks Free</h1>
-            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
-            <h2>Versatile IT Professional With Cybersecurity Specialization | Multi-Track Explorer</h2>
-            <p class="subtitle">Forging Paths Where Cybersecurity, Tech, and Creativity Intersect.</p>
-            <p class="intro-text">
-               I'm Sangsongthong Chantaranothai (my legal name). This site is built with two clear purposes: to serve as my professional portfolio and to present Hexterika as a freelance brand. Whether you're here because I applied for a role with your company or you're exploring the services I provide, this site is designed to guide you directly to what you need—no fluff, no distractions.
-            </p>
-            <p class="intro-text">
-                Hexterika is the name of the brand. Hexterika Cyberlab is its specialization in IT and cybersecurity — my core focus. Everything else lives under Hexterika Break Free.
-            </p>
         </section>
 
         <!--CTA Buttons-->
         <section>
             <ul>
-                <li><a href="hexterika-cyberlab-portfolio.html">📁 Explore Hexterika Cyberlab Portfolio</a></li>
+                <li><a href="portfolio.html">📁 View My Portfolio</a></li>
 
                 <li><a href="hexterika-cyberlab-services.html">🛠 Explore Hexterika Cyberlab Services</a></li>
 
