--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="hexterika-cyberlab-portfolio.html">Hexterika Cyberlab Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
                 <li><a href="certs.html">Certificates</a></li>
             </ul>
