Re-order and adjust certs on certs.html to better aligned with my narrative in SaaS and Cybersecurity + freelancing business

--- a/certs.html
+++ b/certs.html
@@ -65,6 +65,55 @@
         </section>
 
         <section class="bg-1">
+            <h2>📊 CRM & SaaS Support</h2>
+            <p>While Cybersecurity is my core focus, I’m expanding my support skill set to include CRM platforms for SaaS-related roles and remote client services.</p>
+            <ul>
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>LinkedIn: Salesforce Essential Training</strong></p>
+                        <p><a href="https://www.linkedin.com/learning/certificates/e5f50eb54f6685a83b789d106897b86563e67ba659cd5ae650d3e3d7ef9e81da" target="_blank" rel="noopener noreferrer">LinkedIn: Salesforce Essential Training</a></p>
+                        <img src="assets/images/certs/LinkedIn_SalesforceEssentialTrainingCert.png" alt=" Salesforce Essential Training">
+                    </div>
+                </li>
+
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>LinkedIn: Learning Zoho CRM</strong></p>
+                        <p><a href="https://www.linkedin.com/learning/certificates/6d79d3ad29248743651a1f1439c003056ce742962d58b9a76a58b9d6e68c1387?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BGbfPnEzMRUuy%2FRm72w2EJA%3D%3D" target="_blank" rel="noopener noreferrer">LinkedIn: Learning Zoho CRM</a></p>
+                        <img src="assets/images/certs/LinkedIn_LearningZohoCRM.png" alt="Learning Zoho CRM">
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="bg-1">
+            <h2>🌐 English Proficiency & International Experience</h2>
+            <p>My strong command of English — demonstrated through C1-level writing and a year-long U.S. exchange experience — equips me for remote, global roles. I use this strength in both client communication and content creation.</p>
+            <ul>
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>TOEIC Writing: C1 (January 2025)</strong></p>
+                        <img src="assets/images/certs/TOEIC_Writing_Jan2025.jpeg" alt="TOEIC Writing: C1 (January 2025)">
+                    </div>
+                </li>
+
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>TOEIC Listening: B2, Reading: B1 (January 2025)</strong></p>
+                        <img src="assets/images/certs/TOEIC_ListeningAndSpeaking_Jan2025.jpg" alt="TOEIC Listening: B2, Reading: B1 (January 2025)">
+                    </div>
+                </li>
+
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>TOEIC Speaking: B1 (Retake -- February 2025)</strong></p>
+                        <img src="assets/images/certs/TOEIC_Speaking_Feb2025.jpeg" alt="TOEIC Speaking: B1 (Retake -- February 2025)">
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="bg-1">
             <h2>🎨 Design</h2>
             <ul>
                 <li>
@@ -187,50 +236,9 @@
         </section>
 
         <section class="bg-1">
-            <h2>📂 Languages Skills</h2>
-            <ul>
-                <li>
-                    <div class="cert-misc">
-                        <p><strong>TOEIC Writing: C1 (January 2025)</strong></p>
-                        <img src="assets/images/certs/TOEIC_Writing_Jan2025.jpeg" alt="TOEIC Writing: C1 (January 2025)">
-                    </div>
-                </li>
-
-                <li>
-                    <div class="cert-misc">
-                        <p><strong>TOEIC Listening: B2, Reading: B1 (January 2025)</strong></p>
-                        <img src="assets/images/certs/TOEIC_ListeningAndSpeaking_Jan2025.jpg" alt="TOEIC Listening: B2, Reading: B1 (January 2025)">
-                    </div>
-                </li>
-
-                <li>
-                    <div class="cert-misc">
-                        <p><strong>TOEIC Speaking: B1 (Retake -- February 2025)</strong></p>
-                        <img src="assets/images/certs/TOEIC_Speaking_Feb2025.jpeg" alt="TOEIC Speaking: B1 (Retake -- February 2025)">
-                    </div>
-                </li>
-            </ul>
-        </section>
-
-        <section class="bg-1">
             <h2>📁 Other Skills</h2>
+            <p>I initially taught English on Preply, but have since shifted to offering 1-on-1 cybersecurity tutoring for beginners.</p>
             <ul>
-                <li>
-                    <div class="cert-misc">
-                        <p><strong>LinkedIn: Salesforce Essential Training</strong></p>
-                        <p><a href="https://www.linkedin.com/learning/certificates/e5f50eb54f6685a83b789d106897b86563e67ba659cd5ae650d3e3d7ef9e81da" target="_blank" rel="noopener noreferrer">LinkedIn: Salesforce Essential Training</a></p>
-                        <img src="assets/images/certs/LinkedIn_SalesforceEssentialTrainingCert.png" alt=" Salesforce Essential Training">
-                    </div>
-                </li>
-
-                <li>
-                    <div class="cert-misc">
-                        <p><strong>LinkedIn: Learning Zoho CRM</strong></p>
-                        <p><a href="https://www.linkedin.com/learning/certificates/6d79d3ad29248743651a1f1439c003056ce742962d58b9a76a58b9d6e68c1387?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BGbfPnEzMRUuy%2FRm72w2EJA%3D%3D" target="_blank" rel="noopener noreferrer">LinkedIn: Learning Zoho CRM</a></p>
-                        <img src="assets/images/certs/LinkedIn_LearningZohoCRM.png" alt="Learning Zoho CRM">
-                    </div>
-                </li>
-
                 <li>
                     <div class="cert-misc">
                         <p><strong>Preply Language Teaching Certificate</strong></p>
