Add educational background section placeholder and Skyline HS placeholder into the English Proficiency section in certs.html. Awaiting the pictures.

--- a/certs.html
+++ b/certs.html
@@ -110,6 +110,13 @@
                         <img src="assets/images/certs/TOEIC_Speaking_Feb2025.jpeg" alt="TOEIC Speaking: B1 (Retake -- February 2025)">
                     </div>
                 </li>
+
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>Skyline High School, CO, USA (Exchange Student 2011 - 2012)</strong></p>
+                        <img src="" alt="Skyline HS - to be added soon">
+                    </div>
+                </li>
             </ul>
         </section>
 
@@ -247,6 +254,11 @@
                     </div>
                 </li>
             </ul>
+        </section>
+
+        <section>
+            <h2>🎓 Academic Background</h2>
+            <!--Add stuff related to Sport Science Degree-->
         </section>
 
         <section class="bg-1">
