Add SUT-Transcript.png and SkylineHS.png to certs.html

--- a/certs.html
+++ b/certs.html
@@ -114,7 +114,7 @@
                 <li>
                     <div class="cert-misc">
                         <p><strong>Skyline High School, CO, USA (Exchange Student 2011 - 2012)</strong></p>
-                        <img src="" alt="Skyline HS - to be added soon">
+                        <img src="assets/images/certs/SkylineHS.png" alt="Skyline HS">
                     </div>
                 </li>
             </ul>
@@ -258,7 +258,14 @@
 
         <section>
             <h2>🎓 Academic Background</h2>
-            <!--Add stuff related to Sport Science Degree-->
+            <ul>
+                <li>
+                    <div class="academic">
+                        <p><strong>Suranaree University of Technology, B.Sc. Sport Science - Graduated in 2020</strong></p>
+                        <img src="assets/images/certs/SUT-Transcript.png" alt="Sport Science">
+                    </div>
+                </li>
+            </ul>
         </section>
 
         <section class="bg-1">
