Adding Rating (pricing) for the hexterika-cyberlab-services.html.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -48,6 +48,31 @@
             </ul>
         </section>
 
+        <!--Pricing-->
+        <section>
+            <h2> 💼 Rates & Availability</h2>
+            <p>I currently offer my IT and cybersecurity services through several platforms while building my client base. Rates may vary depending on the platform due to fees, policies, and my early presence on those networks.</p>
+            <p>Standard Direct Rate (via this website):</p>
+            <ul>
+                <li>Cybersecurity Support & Training: $25/hour</li>
+                <li>Technical Troubleshooting & IT Help: $20/hour</li>
+                <li>Project-Based Work: Starting at $150/project</li>
+            </ul>
+            <p>First-Platform Discount (Preply):</p>
+            <ul>
+                <li>Cybersecurity Tutoring for Beginners: $10/hour</li>
+            </ul>
+            <p>Upwork Rate (Market Entry Offer):</p>
+            <ul>
+                <li>General IT & Security Services: $17/hour</li>
+            </ul>
+            <p>I offer these discounted rates temporarily as I build my early reputation on public freelancing platforms.For clients who prefer direct collaboration, my standard rate ensures faster response, flexible scheduling, and custom support.</p>
+
+            <h3>💳 Payment Options for Direct Clients </h3>
+            <p>For clients outside of platforms like Upwork or Preply, I accept direct payments via Wise.com — a secure, low-fee international payment solution.</p>
+            <p>If you prefer working directly, feel free to reach out for custom quotes and flexible billing options.</p>
+        </section>
+
         <!--Sample Projects-->
         <section>
             <h2>Sample Projects</h2>
