Rename the files that were created with wrong names such as .html inside css folder were changed into .css. Changing name of hexterika-cyberlab-portfolio.css to portfolio.css to match the rest of the site and add it to portfolio.html. Fixed the alignment of index.html main (working on CSS).

--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
             <h1>Who Am I?</h1>
             <p>Hi, I'm Sangsongthong, the creator of Hexterika — a digital brand dedicated to IT support and cybersecurity services. I'm currently operating as a solo freelancer while building my career in cybersecurity and SaaS.</p>
             <p>This website serves a dual purpose:</p>
-            <ul>
+            <ol>
                 <li>A professional portfolio to support my remote job search in cybersecurity and SaaS</li>
                 <li>A freelance services hub under my brand, Hexterika CyberLab, for project-based work and client collaboration</li>
-            </ul>
+            </ol>
         </section>
 
         <!--CTA Buttons-->
         <section>
             <ul>
-                <li><a href="portfolio.html">📁 View My Portfolio</a></li>
+                <li><a href="portfolio.html" class="button-cta">📁 View My Portfolio</a></li>
 
-                <li><a href="hexterika-cyberlab-services.html">🛠 Explore Hexterika Cyberlab Services</a></li>
+                <li><a href="hexterika-cyberlab-services.html" class="button-cta">🛠 Explore Hexterika Cyberlab Services</a></li>
 
                 <li>
-                    <a href="certs.html">📜 See My Full Certifications!</a>
+                    <a href="certs.html" class="button-cta">📜 See My Full Certifications!</a>
                     <p>You'll find all my certifications here — including those beyond the scope of Hexterika CyberLab. These reflect my journey of exploration, learning, and professional growth. While my current focus is Cybersecurity & IT, these skills may resurface as the brand evolves.</p>
                 </li>
             </ul>
