--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <main>
 
         <!--Welcome Section-->
-        <section>
+        <section class="welcome">
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
             <h1>Who Am I?</h1>
             <p>Hi, I'm Sangsongthong, the creator of Hexterika — a digital brand dedicated to IT support and cybersecurity services. I'm currently operating as a solo freelancer while building my career in cybersecurity and SaaS.</p>
             <p>This website serves a dual purpose:</p>
             <ol>
                 <li>A professional portfolio to support my remote job search in cybersecurity and SaaS</li>
-                <li>A freelance services hub under my brand, Hexterika CyberLab, for project-based work and client collaboration</li>
+                <li>A freelance services hub under my brand, Hexterika Cyberlab, for project-based work and client collaboration</li>
             </ol>
         </section>
 
         <!--CTA Buttons-->
-        <section>
+        <section class="cta">
             <ul>
                 <li><a href="portfolio.html" class="button-cta">📁 View My Portfolio</a></li>
 
