Make changes on portfolio and index pages (landing pages) by working on CSS - using text colors to highlight readability.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <!--CTA Buttons-->
         <section class="cta">
             <ul>
-                <li><a href="portfolio.html" class="button-cta">📁 View My Portfolio</a></li>
+                <li><h4><a href="portfolio.html" class="button-cta">📁 View My Portfolio</a></h4></li>
 
-                <li><a href="hexterika-cyberlab-services.html" class="button-cta">🛠 Explore Hexterika Cyberlab Services</a></li>
+                <li><h4><a href="hexterika-cyberlab-services.html" class="button-cta">🛠 Explore Hexterika Cyberlab Services</a></h4></li>
 
                 <li>
-                    <a href="certs.html" class="button-cta">📜 See My Full Certifications!</a>
+                    <h4><a href="certs.html" class="button-cta">📜 See My Full Certifications!</a></h4>
                     <p>You'll find all my certifications here — including those beyond the scope of Hexterika CyberLab. These reflect my journey of exploration, learning, and professional growth. While my current focus is Cybersecurity & IT, these skills may resurface as the brand evolves.</p>
                 </li>
             </ul>
