--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                 <li><strong>📦 Supporting Tools & Adaptable Skills:</strong> Familiar with PowerShell, Docker, Python, Bash scripting, Elastic SIEM, Splunk, CSS, JavaScript, React, Salesforce Essentials, Microsoft 365, AI tools (evolving), Notion, and Moodle — used to enhance automation, user support, and cross-functional collaboration. Optional creative tools include Canva, Figma, CapCut, GIMP, Kdenlive, and various social media platforms.</li>
                 <li>
                     <strong>🎓 Certified & Continually Improving:</strong> I hold the following certifications:
-                    <div>
+                    <div class="cert-card">
                         <ul>
                             <li>📜 <strong>CompTIA Security+</strong> (Valid 2024-2027)</li>
                             <li>📜 <strong>ISC² Certified in Cybersecurity (CC)</strong> (Valid 2023-2026)</li>
@@ -113,7 +113,7 @@
             <h2>🧩 Selected Projects & Labs</h2>
             <p>Here are hands-on projects that reflect how I troubleshoot real systems, secure environments, and communicate findings. Each one demonstrates skills relevant to technical support, cybersecurity awareness, and SaaS operations.</p>
 
-            <h3>📄 Client-Facing Technical Reports</h3>
+            <h4>📄 Client-Facing Technical Reports</h4>
             <ul>
                 <li>
                     <strong>Mock Penetration Test Report:</strong> Simulated client assessment with remediation-focused language and report structure.  
@@ -125,7 +125,7 @@
                 </li>
             </ul>
 
-            <h3>☁️ SaaS Environment Simulation & Cloud Labs</h3>
+            <h4>☁️ SaaS Environment Simulation & Cloud Labs</h4>
             <ul>
                 <li>
                     <strong>AWS IAM Security Lab:</strong> Investigated identity misconfigurations, permission flaws, and privilege escalation scenarios within AWS.  
@@ -137,7 +137,7 @@
                 </li>
             </ul>
 
-            <h3>🛡️ Security Labs & Attack Simulations</h3>
+            <h4>🛡️ Security Labs & Attack Simulations</h4>
             <ul>
                 <li>
                     <strong>Active Directory Enterprise Lab:</strong> Simulated an enterprise AD environment to explore sysadmin operations, misconfigurations, and internal attack vectors (e.g., Pass-the-Hash, Kerberoasting).  
