Add MMA + scuba diver mindset to portfolio.html.

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,9 @@
         <!--Introduction-->
         <section>
             <h1>👋 Welcome — I'm a Global SaaS Support Professional</h1>
-            <p>I approach tech support like MMA: cross-trained, calm under pressure, and built for real-world complexity. My experience spans device-level troubleshooting, enterprise infrastructure, and security-aware SaaS workflows — with every role deepening my ability to support users clearly and confidently across platforms.</p>
-            <p>From CRM sandboxes to Linux servers, I build and document solutions through <strong>Hexterika Cyberlab</strong> — my active freelancing and project environment for remote-first technical work. This site reflects that work in motion: production-minded, client-ready, and globally aligned.</p>
+            <p>🥋 MMA mindset — specialized yet well-rounded — meets 🌊 scuba diver calm under pressure.</p>
+            <p>I approach IT support and cybersecurity with the adaptability of a cross-trained fighter and the steady focus needed to work in high-stakes, time-critical environments. My core discipline is cybersecurity, but I've trained across the IT stack — from device troubleshooting to SaaS administration and cloud account security — so I see how all the pieces connect and solve problems with both creativity and precision.</p>
+            <p>Whether it's a quick IT fix or a targeted security engagement, I bring flexibility, technical depth, and the composure to deliver clear, reliable results.</p>
         </section>
         <section>
             <h2>✅ My Journey: From Tech Support Generalist to Global SaaS Readiness</h2>
