--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -21,61 +21,81 @@
     </header>
     <!-- Main Content (Grid Layout) -->
     <main>
-        <!--Overview Section-->
+
+        <!--Intro-->
         <section>
-            <h1>Hexterika Cyberlab Services</h1>
-            <p>Welcome to <strong>Hexterika CyberLab</strong> — the tech services arm of the Hexterika brand. I provide a hybrid mix of <strong>remote tech support, cybersecurity consulting, SaaS support, and IT infrastructure services</strong>. My goal is to help individuals and small businesses secure, maintain, and optimize their digital environments while continuing my transition into a full-time cybersecurity and SaaS remote career.</p>
-            <p>Hexterika CyberLab is currently operated as an unregistered freelance business under my legal name, <em>Sangsongthong</em>. Business registration is under consideration for future expansion, likely in Georgia or Romania, depending on long-term residency, client base, and operational needs. Remote projects are accepted through <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork</a> and direct outreach via the contact section below.</p>
+            <h1>Hexterika Cyberlab</h1>
+            <p><strong>Remote tech support, SaaS operations, and practical cybersecurity — with the adaptability of an MMA fighter and the calm focus of a scuba diver under pressure.</strong></p>
+            <p>I focus on clear communication, careful scope, and steady delivery for individuals and small businesses.</p>
         </section>
 
-        <!--Current Services-->
+        <!--About-->
         <section>
-            <h2>Current Services</h2>
+            <h2>About</h2>
+            <p>Like an MMA fighter, I've trained across the full IT stack — but my core discipline is cybersecurity. This cross-training means I understand how all the pieces fit together, letting me spot problems others miss and create solutions that are both practical and secure. Whether it's a quick IT fix or a targeted security engagement, I bring flexibility, depth, and the steady focus needed to deliver results under pressure.</p>
+        </section>
+
+        <!--What I do-->
+        <section>
+            <h2>What I do</h2>
+            <h4>IT Support & Operations</h4>
             <ul>
-                <li><strong>Remote Tech Support & Troubleshooting</strong><br>Support for home networks, smart devices, SaaS platforms (Notion, Zoom, M365), and user onboarding or configuration help.</li>
+                <li>Basic Windows troubleshooting (remote)</li>
+                <li>Windows device setup & basic hardening</li>
+                <li>File backup & sync setup (rsync, FreeFileSync, Google Drive/Dropbox/OneDrive)</li>
+                <li>Business email setup & authentication (SPF, DKIM, DMARC — Zoho Mail & basic DNS)</li>
+                <li>End-user productivity support for Google Workspace & Microsoft 365 (non-admin)</li>
+            </ul>
 
-                <li><strong>Business Email Setup & Security Hardening</strong><br>End-to-end setup of custom business email under your domain, with SPF/DKIM/DMARC implementation and DNS troubleshooting using tools like MXToolbox.</li>
+            <h4>Cloud & Accounts</h4>
+            <ul>
+                <li>AWS IAM access reviews (least privilege, MFA, access key hygiene)</li>
+                <li>SSO/MFA rollout guidance for small teams</li>
+                <li>Cloud cost/leak checks (keys, storage, policies)</li>
+            </ul>
 
-                <li><strong>Lightweight Cybersecurity Review</strong><br>Basic security assessments for websites, cloud apps, and work-from-home setups. Includes surface vulnerability scanning and simple remediation guidance.</li>
+            <h4>Security & Assurance</h4>
+            <ul>
+                <li><strong>AWS IAM Mini-Audit</strong> — Read-only review of root/IAM/MFA/password policy/billing access</li>
+                <li>Basic account & device security hygiene check (MFA status, updates, weak defaults)</li>
+                <!-- Intentionally excluding phishing and full web‑app pentests at this stage -->
+            </ul>
+        </section>
 
-                <li><strong>Penetration Testing (Entry-Level)</strong><br>Offering mock and entry-level pentesting reports, including internal lab simulations focused on AD environments and AWS IAM permissions testing. This also includes real-world practice experience through platforms like:<br>
-                - Top 3% Contributor on TryHackMe (105+ rooms completed)<br>
-                - PortSwigger Web Security Labs (OWASP Top 10 coverage)<br>
-                Selected walkthroughs are included in the sample projects below.
+        <!--My Offer-->
+        <section>
+            <h2>Simple, Clear Packages</h2>
+            <ul>
+                <li>
+                    <strong>Small Business Backup & Recovery Setup</strong><br>
+                    Automatic file backups (local/cloud), plus a test restore and a one-page recovery guide.<br>
+                    <em>Scope:</em> file-level backups for individuals & small teams. Not a disaster recovery or enterprise imaging service.<br>
+                    -- Starting at $20
                 </li>
-
-                <li><strong>Cybersecurity Education & Tutoring</strong><br>1-on-1 cybersecurity tutoring for beginners available via <a href="https://preply.in/SANGSONGTHONG6EN23352917" target="_blank" rel="noopener noreferrer">Preply</a>.</li>
+                <li>
+                    <strong>AWS IAM Mini-Audit</strong> <em>(Coming September 2025)</em><br>
+                    Read-only review of IAM users/groups/policies, MFA and password policy, access keys, and billing access separation.<br>
+                    Delivered as a plain-language report with prioritized recommendations.<br>
+                    -- Starting at $20
+                </li>
+                <li>
+                    <strong>Active Directory Health Check</strong> <em>(In Development)</em><br>
+                    Safe enumeration and misconfiguration review for small AD environments (no disruptive exploitation).<br>
+                    Report includes actionable fixes for IT generalists.<br>
+                    -- Starting at $20
+                </li>
+                <li>
+                    <strong>Website Security Health Check</strong> <em>(In Development)</em><br>
+                    Check for outdated software, weak credentials, and common misconfigurations on small business sites (e.g., CMS/WordPress).<br>
+                    Includes a short debrief.<br>
+                    -- Starting at $20
+                </li>
             </ul>
         </section>
 
-        <!--Pricing-->
+        <!--Sample Work-->
         <section>
-            <h2> 💼 Rates & Availability</h2>
-            <p>I currently offer my IT and cybersecurity services through several platforms while building my client base. Rates may vary depending on the platform due to fees, policies, and my early presence on those networks.</p>
-            <p>Standard Direct Rate (via this website):</p>
-            <ul>
-                <li>Cybersecurity Support & Training: $25/hour</li>
-                <li>Technical Troubleshooting & IT Help: $20/hour</li>
-                <li>Project-Based Work: Starting at $150/project</li>
-            </ul>
-            <p>First-Platform Discount (Preply):</p>
-            <ul>
-                <li>Cybersecurity Tutoring for Beginners: $10/hour</li>
-            </ul>
-            <p>Upwork Rate (Market Entry Offer):</p>
-            <ul>
-                <li>General IT & Security Services: $17/hour</li>
-            </ul>
-            <p>I offer these discounted rates temporarily as I build my early reputation on public freelancing platforms.For clients who prefer direct collaboration, my standard rate ensures faster response, flexible scheduling, and custom support.</p>
-
-            <h3>💳 Payment Options for Direct Clients </h3>
-            <p>For clients outside of platforms like Upwork or Preply, I accept direct payments via Wise.com — a secure, low-fee international payment solution.</p>
-            <p>If you prefer working directly, feel free to reach out for custom quotes and flexible billing options.</p>
-        </section>
-
-        <!--Sample Projects-->
-        <section>
-            <h2>Sample Projects</h2>
+            <h2>Sample Work</h2>
             <ul>
                 <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Mock Penetration Testing Report</a></li>
 
@@ -84,30 +104,47 @@
                 <li><a href="https://github.com/sangsongthong-hexterika/PortSwiggerWalkthroughs" target="_blank" rel="noopener noreferrer">PortSwigger Web Security Academy Walkthroughs</a></li>
 
                 <li><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">Cyberlab Oneshot</a></li>
-
-                <li>Coming soon: AWS IAM Misconfig Review, AD Pentest Report</li>
             </ul>
+            <p>Coming soon: AWS IAM Misconfig Review, AD Pentest Report</p>
         </section>
 
-        <!-- Contact Section -->
+        <!--How We Work-->
+        <section>
+            <h2>How We Work</h2>
+            <ol>
+                <li>Quick intro call</li>
+                <li>Fixed scope & price</li>
+                <li>Secure remote work</li>
+                <li>Clear results & next steps</li>
+            </ol>
+        </section>
+
+        <!--Payment-->
+        <section>
+            <h2>Payment</h2>
+            <ul>
+                <li><strong>Wise (preferred):</strong> Global-friendly, low fees. I'll provide Wise payment details or a secure payment link on request.</li>
+                <li><strong>Card via Wise Payment Link:</strong> Available after scope confirmation (no account needed on your side).</li>
+                <li><strong>PayPal:</strong> Available on request.</li>
+                <li>Invoices in USD/EUR.</li>
+            </ul>
+            <p class="note">Full e-commerce checkout is intentionally not enabled; I scope each engagement first to keep costs predictable and security tight.</p>
+        </section>
+
+        <!--Contact-->
         <section>
             <h2>Contact</h2>
-            <p>If you're interested in working with me or have project inquiries, please reach out via the platforms below:</p>
             <ul>
-                <li><a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork Profile</a></li>
-                <li><a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website">Email: hexterika.cyberlab@hexterika-breaks-free.website</a></li>
-            </ul>
-        </section>
-
-        <!-- Social Media Section -->
-        <section>
-            <h2>Social Media</h2>
-            <ul>
+                <li>Email: <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website">hexterika.cyberlab@hexterika-breaks-free.website</a></li>
                 <li><a href="https://www.facebook.com/hexterikacyberlab/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
                 <li><a href="https://www.instagram.com/hexterika.cyberlab/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                 <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                <li><a href="https://preply.in/SANGSONGTHONG6EN23352917" target="_blank" rel="noopener noreferrer">Preply</a></li>
+                <li><a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork</a></li>
             </ul>
+            <p>Got an IT headache or security question? Book a 15-min intro call.</p>
+            <a href="https://calendar.app.google/M51BQ7DQ2Z3L4SK38" target="_blank" rel="noopener noreferrer" class="button-cta">Book an Appointment</a>
         </section>
     </main>
 
