Make sure to better style the booking botton on hexterika-cyberlab-services.html on its CSS page.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -144,7 +144,7 @@
                 <li><a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork</a></li>
             </ul>
             <p>Got an IT headache or security question? Book a 15-min intro call.</p>
-            <a href="https://calendar.app.google/M51BQ7DQ2Z3L4SK38" target="_blank" rel="noopener noreferrer" class="button-cta">Book an Appointment</a>
+            <h4><a href="https://calendar.app.google/M51BQ7DQ2Z3L4SK38" target="_blank" rel="noopener noreferrer" class="button-cta">📅 Book an Appointment</a></h4>
         </section>
     </main>
 
