Change nav bar background color and make the text h4 on all active pages. Replace certs.html's secondary CSS page with the correct one, the certs.css instead of index.css. Realized that the CC cert pic has transparent background so I decided to take a screenshot of it so it has white background and replace it with that one so it is clearly visible on certs.html with the black background.

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -12,10 +12,10 @@
     <header class="header">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
-                <li><a href="certs.html">Certificates</a></li>
+                <li><h4><a href="index.html">Home</a></h4></strong></li>
+                <li><h4><a href="portfolio.html">Portfolio</a></h4></li>
+                <li><h4><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></h4></li>
+                <li><h4><a href="certs.html">Certificates</a></h4></li>
             </ul>
         </nav>
     </header>
