--- a/certs.html
+++ b/certs.html
@@ -12,10 +12,10 @@
     <header class="header">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
-                <li><a href="certs.html">Certificates</a></li>
+                <li><h4><a href="index.html">Home</a></h4></strong></li>
+                <li><h4><a href="portfolio.html">Portfolio</a></h4></li>
+                <li><h4><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></h4></li>
+                <li><h4><a href="certs.html">Certificates</a></h4></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,7 @@
                     <div>
                         <p><strong>ISC2: Certified in Cybersecurity (CC)</strong></p>
                         <p><a href="https://www.credly.com/badges/2219a41c-2094-41a5-a530-28cf093c2c29/public_url" target="_blank" rel="noopener noreferrer">Credly ISC2: Certified in Cybersecurity (CC)</a></p>
-                        <img src="assets/images/certs/certified-in-cybersecurity-cc.png" alt="Certified in Cybersecurity (CC) Certificate"/>
+                        <img src="assets/images/certs/cc-cert-screenshot.png" alt="Certified in Cybersecurity (CC) Certificate"/>
                     </div>
                 </li>
 
