--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,10 @@
     <header class="header">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
-                <li><a href="certs.html">Certificates</a></li>
+                <li><h4><a href="index.html">Home</a></h4></strong></li>
+                <li><h4><a href="portfolio.html">Portfolio</a></h4></li>
+                <li><h4><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></h4></li>
+                <li><h4><a href="certs.html">Certificates</a></h4></li>
             </ul>
         </nav>
     </header>
